--- a/main.html
+++ b/main.html
@@ -10,6 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<thead>
+			<th>roll number</th>
+			<th>name</th>
+		</thead>
+		<tbody>
+			<tr><td>468</td>
+				<td>Riz</td</tr>
+			<tr><td>469</td>
+				<td>Rumi</td</tr>
+		</tbody>
+	</table>
 
 </body>
 
